--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,17 @@ h4 {
   margin-top: 15px;
 }
 
-.contact h3 {
+#contact h3 {
   font-size: 3.75rem;
   color: #39616b;
+}
+
+#contact .img p {
+  font-size: 1.625rem;
+  color: #2cbcc5;
+  font-weight: bold;
+  text-shadow: 0 0 8px #feff00;
+  line-height: 1em;
 }
 
 /*RWD文字縮小==================================*/
@@ -161,8 +169,11 @@ h4 {
   .students ul li p {
     font-size: 0.875rem;
   }
-  .contact h3 {
+  #contact h3 {
     font-size: 3.55rem;
+  }
+  #contact .img p {
+    font-size: 1.5rem;
   }
 }
 
@@ -205,6 +216,24 @@ header {
   height: 690px;
   margin: auto;
   overflow: hidden;
+}
+
+/*-----馬上開課標誌------------------------------*/
+header > div > a {
+  display: block;
+  width: 150px;
+  height: 130px;
+  border-radius: 50%;
+  background-color: #ffe868;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 1.3em;
+  padding-top: 20px;
+  position: absolute;
+  top: -70px;
+  left: -80px;
 }
 
 /*-----標題字的底色塊----------------------------*/
@@ -298,6 +327,9 @@ header > div::after {
     background-size: 100% auto;
     height: 0;
     padding-bottom: 85%;
+  }
+  header div > a {
+    left: 25px;
   }
   header div {
     margin-top: 11.5%;
@@ -683,6 +715,14 @@ header > div::after {
   margin-right: 0.4em;
 }
 
+.students .container:last-child ul {
+  padding-bottom: 90px;
+}
+
+.students .container:last-child ul li {
+  font-weight: normal;
+}
+
 /*=====適合對象================================*/
 @media (max-width: 875px) {
   .students .container {
@@ -700,6 +740,9 @@ header > div::after {
     width: 380px;
     margin: 0 auto;
   }
+  .students .container:last-child ul {
+    padding-bottom: 10%;
+  }
 }
 
 @media (max-width: 480px) {
@@ -715,13 +758,13 @@ header > div::after {
   }
 }
 
-.contact {
+#contact {
   background-image: url(../images/bg_grey.png);
   padding-top: 60px;
   /*表單項目-------------------------*/
 }
 
-.contact h3 {
+#contact h3 {
   width: 800px;
   margin: 0 auto 60px;
   line-height: 2em;
@@ -732,28 +775,38 @@ header > div::after {
           box-shadow: 0 11px #B7CFD1;
 }
 
-.contact .container {
+#contact .container {
   overflow: auto;
   zoom: 1;
 }
 
-.contact img {
+#contact .img {
   width: 44%;
   float: left;
+  margin: 0;
 }
 
-.contact form {
+#contact .img img {
+  width: 100%;
+}
+
+#contact .img p {
+  position: relative;
+  top: -20px;
+}
+
+#contact form {
   float: left;
   width: 55%;
   margin: 10px auto;
   position: relative;
 }
 
-.contact #twzipcode input {
+#contact #twzipcode input {
   display: none;
 }
 
-.contact input, .contact .area {
+#contact input, #contact .area {
   width: 45%;
   height: 40px;
   font-size: 22px;
@@ -765,35 +818,35 @@ header > div::after {
           box-sizing: border-box;
 }
 
-.contact input::-webkit-input-placeholder {
+#contact input::-webkit-input-placeholder {
   color: #2a95af;
 }
 
-.contact input:-ms-input-placeholder {
+#contact input:-ms-input-placeholder {
   color: #2a95af;
 }
 
-.contact input::-ms-input-placeholder {
+#contact input::-ms-input-placeholder {
   color: #2a95af;
 }
 
-.contact input::placeholder {
+#contact input::placeholder {
   color: #2a95af;
 }
 
-.contact .area {
+#contact .area {
   color: #2a95af;
 }
 
-.contact #contactEmail {
+#contact #contactEmail {
   width: 95%;
 }
 
-.contact #contactIAgree {
+#contact #contactIAgree {
   width: 25px;
 }
 
-.contact label, .contact a {
+#contact label, #contact a {
   font-size: 22px;
   color: #333;
   line-height: 3em;
@@ -801,14 +854,15 @@ header > div::after {
   top: -15px;
 }
 
-.contact #submitBtn {
-  width: 147px;
+#contact #submitBtn {
+  width: 180px;
   height: 57px;
   background-color: #ff6633;
   border-radius: 10px;
   color: #FFF;
-  letter-spacing: 10px;
-  padding-left: 45px;
+  letter-spacing: 3px;
+  text-align: center;
+  padding-left: 0;
   border: none;
   float: right;
   position: absolute;
@@ -816,56 +870,56 @@ header > div::after {
   right: 20px;
 }
 
-/*=====索取資訊表單===========================*/
+/*=====RWD===========================*/
 @media (max-width: 875px) {
-  .contact h3 {
+  #contact h3 {
     font-size: 50px;
     width: 600px;
   }
-  .contact img {
+  #contact .img {
     float: none;
     width: 70%;
     width: 550px;
     display: block;
     margin: 0 auto 20px;
   }
-  .contact form {
+  #contact form {
     width: 90%;
     float: none;
     margin-bottom: 50px;
   }
-  .contact input, .contact .area {
+  #contact input, #contact .area {
     width: 45%;
     margin: 2%;
   }
-  .contact #contactEmail {
+  #contact #contactEmail {
     width: 95%;
   }
-  .contact #submitBtn {
+  #contact #submitBtn {
     top: 250px;
   }
 }
 
 @media (max-width: 650px) {
-  .contact h3 {
+  #contact h3 {
     font-size: 32px;
     width: 85%;
     max-width: 450px;
   }
-  .contact img {
+  #contact .img {
     width: 85%;
   }
-  .contact form {
+  #contact form {
     width: 90%;
   }
-  .contact input, .contact #contactEmail, .contact .area {
+  #contact input, #contact #contactEmail, #contact .area {
     width: 95%;
   }
-  .contact label, .contact a {
+  #contact label, #contact a {
     font-size: 20px;
   }
-  .contact #submitBtn {
-    top: 350px;
+  #contact #submitBtn {
+    top: 360px;
   }
 }
 
