--- a/scss/_area6_contact.scss
+++ b/scss/_area6_contact.scss
@@ -1,5 +1,5 @@
 // =====索取資訊表單==========================
-.contact {
+#contact {
 	background-image: url(../images/bg_grey.png);
 	padding-top: 60px;
 
@@ -16,9 +16,17 @@
 		overflow: auto;
     zoom: 1;
 	}
-	img {
+	.img {
 		width: 44%;
 		float: left;
+		margin: 0;
+		img {
+			width: 100%;
+		}
+		p {
+			position: relative;
+			top: -20px;
+		}
 	}
 	form {
 		// display: inline-block;
@@ -65,13 +73,16 @@
 		// float: left;
 	}
 	#submitBtn {
-		width: 147px;
+		// width: 147px;
+		width: 180px;
 		height: 57px;
 		background-color: #ff6633;
 		border-radius: 10px;
 		color: #FFF;
-		letter-spacing: 10px;
-		padding-left: 45px;
+		letter-spacing: 3px;
+		text-align: center;
+		padding-left: 0;
+		// padding-left: 45px;
 		// margin-top: 70px;
 		border: none;
 		float: right;
@@ -80,60 +91,60 @@
 		right: 20px;
 	}
 }
-/*=====索取資訊表單===========================*/
-
+/*=====RWD===========================*/
+// 圖和表單上下排列
 @media (max-width: 875px){
-	.contact h3 {
+	#contact h3 {
 		font-size: 50px;
 		width: 600px;
 	}
-	.contact img {
+	#contact .img {
 		float: none;
 		width: 70%;
 		width: 550px;
 		display: block;
 		margin: 0 auto 20px;
 	}
-	.contact form {
+	#contact form {
 		width: 90%;
 		float: none;
 		margin-bottom: 50px;
 	}
-	.contact input,.contact .area {
+	#contact input,#contact .area {
 		width: 45%;
 		margin: 2%;
 	}
-	.contact #contactEmail {
+	#contact #contactEmail {
 		width: 95%;
 	}
 
-	.contact #submitBtn {
+	#contact #submitBtn {
 		// float: none;
 		// display: block;
 		// margin: 15px auto;
 		top: 250px;
 	}
 }
-
+// 表單變成單攔排列
 @media (max-width: 650px){
-	.contact h3 {
+	#contact h3 {
 		font-size: 32px;
 		width: 85%;
 		max-width: 450px;
 	}
-	.contact img {
+	#contact .img {
 		width: 85%;
 	}
-	.contact form {
+	#contact form {
 		width: 90%;
 	}
-	.contact input, .contact #contactEmail, .contact .area {
+	#contact input, #contact #contactEmail, #contact .area {
 		width: 95%;
 	}
-	.contact label,.contact a {
+	#contact label,#contact a {
 		font-size: 20px;
 	}
-	.contact #submitBtn {
-		top: 350px;
+	#contact #submitBtn {
+		top: 360px;
 	}
 }
