--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -9,7 +9,8 @@ $fontSizes: (							//預設文字大小16px=1rem
 	classPoints_h4: 1.625rem,//26px,4個課程重點方塊的標題
 	student_li: 1.625rem,		//30px,在.student的項目標題
 	student_p: 1.125rem,				//18px,在.student的項目說明文字
-	contact_h3: 3.75rem			//60px,表單區塊的大標題
+	contact_h3: 3.75rem,			//60px,表單區塊的大標題
+	contact_p: 1.625rem			//30px,表單區塊的免費領取Excel數位學習秘笈
 );
 
 p,ul {
@@ -100,9 +101,18 @@ h4 {
 	margin-top: 15px;
 }
 // 表單區塊的大標題
-.contact h3 {
+#contact h3 {
 	font-size:  map-get($fontSizes, contact_h3);
 	color: #39616b;
+}
+// 表單區塊的免費領取Excel數位學習秘笈
+#contact .img p {
+	font-size:  map-get($fontSizes, contact_p);
+	color: map-get($colors, primary);
+	font-weight: bold;
+	text-shadow: 0 0 8px #feff00;
+	line-height: 1em;
+
 }
 
 /*RWD文字縮小==================================*/
@@ -139,7 +149,10 @@ h4 {
 	.students ul li p {// 適合學習對象的項目中的說明文字
 		font-size: map-get($fontSizes, student_p) - 0.25rem;
 	}
-	.contact h3 {// 表單區塊的大標題
+	#contact h3 {// 表單區塊的大標題
 		font-size:  map-get($fontSizes, contact_h3) - 0.2rem;
+	}
+	#contact .img p {// 表單區塊的免費領取字樣
+		font-size:  map-get($fontSizes, contact_p) - 0.125rem;
 	}
 }
