--- a/scss/_area2_advantage.scss
+++ b/scss/_area2_advantage.scss
@@ -36,6 +36,20 @@
                 padding-top: 25px;
             }
         }
+        .circle:hover {
+            -webkit-box-shadow:2px 5px 4px rgba(0,0,0,0.2);
+            box-shadow:2px 5px 4px rgba(0,0,0,0.2);
+        }
+    }
+    .container>div:hover {
+        img:nth-child(3) {
+            -webkit-transition: all 0.6s ease;
+            transition: all 0.6s ease;
+            -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+            -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+        }
     }
 }
 
