--- a/scss/_area4_class.scss
+++ b/scss/_area4_class.scss
@@ -37,6 +37,9 @@
 			padding: 20px 10px 20px 60px;
 		}
 	}
+	.container div:hover {
+		transform: scale(1.07);
+	}
 }
 /*=====RWD==========================*/
 
