馬上開課標示固定右下角顯示；課程優點區域的滑鼠滑入動畫調整；課程重點區域滑鼠滑入動畫加漸變(transition)

--- a/scss/_area6_contact.scss
+++ b/scss/_area6_contact.scss
@@ -16,17 +16,10 @@
 		overflow: auto;
     zoom: 1;
 	}
-	.img {
+	img {
 		width: 44%;
 		float: left;
-		margin: 0;
-		img {
-			width: 100%;
-		}
-		p {
-			position: relative;
-			top: -20px;
-		}
+		// margin: 0;
 	}
 	form {
 		// display: inline-block;
@@ -98,7 +91,7 @@
 		font-size: 50px;
 		width: 600px;
 	}
-	#contact .img {
+	#contact img {
 		float: none;
 		width: 70%;
 		width: 550px;
@@ -132,7 +125,7 @@
 		width: 85%;
 		max-width: 450px;
 	}
-	#contact .img {
+	#contact img {
 		width: 85%;
 	}
 	#contact form {
