--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,102 @@ h4 {
   }
 }
 
+/*-----馬上開課標誌------------------------------*/
+nav > a {
+  display: block;
+  width: 120px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #FEFF00;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  font-size: 28px;
+  text-align: center;
+  line-height: 1.3em;
+  padding-top: 20px;
+  z-index: 999;
+  opacity: 0;
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  -webkit-transition: ease-out 0.3s;
+  transition: ease-out 0.3s;
+}
+
+nav > a::after {
+  content: url(../images/icon_pointer.svg);
+  display: block;
+  -webkit-transform: rotate(-30deg);
+          transform: rotate(-30deg);
+  position: absolute;
+  right: 3px;
+  bottom: 3px;
+}
+
+nav > a:hover {
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateY(360deg);
+  transform: rotateY(360deg);
+}
+
+.fixed {
+  opacity: 1;
+  -webkit-transition: ease-out 0.5s;
+  transition: ease-out 0.5s;
+  -webkit-animation: signAni 8s infinite;
+          animation: signAni 8s infinite;
+}
+
+@-webkit-keyframes signAni {
+  25% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  75% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  95% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes signAni {
+  25% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  75% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  95% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 /*header banner (桌機版型)=======================*/
 header {
   background-image: url(../images/banner_bg.jpg);
@@ -216,24 +312,6 @@ header {
   height: 690px;
   margin: auto;
   overflow: hidden;
-}
-
-/*-----馬上開課標誌------------------------------*/
-header > div > a {
-  display: block;
-  width: 150px;
-  height: 130px;
-  border-radius: 50%;
-  background-color: #ffe868;
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 1.3em;
-  padding-top: 20px;
-  position: absolute;
-  top: -70px;
-  left: -80px;
 }
 
 /*-----標題字的底色塊----------------------------*/
@@ -327,9 +405,6 @@ header > div::after {
     background-size: 100% auto;
     height: 0;
     padding-bottom: 85%;
-  }
-  header div > a {
-    left: 25px;
   }
   header div {
     margin-top: 11.5%;
@@ -518,6 +593,20 @@ header > div::after {
   padding-top: 25px;
 }
 
+.advantage .container > div .hover_shadow {
+  -webkit-box-shadow: 2px 5px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 5px 4px rgba(0, 0, 0, 0.2);
+}
+
+.advantage .container > div:hover img:nth-child(3) {
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateY(360deg);
+  transform: rotateY(360deg);
+}
+
 /*=====RWD=================================*/
 @media (max-width: 1230px) {
   .advantage {
@@ -664,6 +753,8 @@ header > div::after {
   margin: 3% 5%;
   -webkit-box-shadow: 0px 0px 10px #61616133;
           box-shadow: 0px 0px 10px #61616133;
+  -webkit-transition: linear 0.3s;
+  transition: linear 0.3s;
 }
 
 .classPoints .container div img {
@@ -673,6 +764,11 @@ header > div::after {
 .classPoints .container div ul {
   text-align: left;
   padding: 20px 10px 20px 60px;
+}
+
+.classPoints .container div:hover {
+  -webkit-transform: scale(1.07);
+          transform: scale(1.07);
 }
 
 /*=====RWD==========================*/
@@ -780,19 +876,9 @@ header > div::after {
   zoom: 1;
 }
 
-#contact .img {
+#contact img {
   width: 44%;
   float: left;
-  margin: 0;
-}
-
-#contact .img img {
-  width: 100%;
-}
-
-#contact .img p {
-  position: relative;
-  top: -20px;
 }
 
 #contact form {
@@ -876,7 +962,7 @@ header > div::after {
     font-size: 50px;
     width: 600px;
   }
-  #contact .img {
+  #contact img {
     float: none;
     width: 70%;
     width: 550px;
@@ -906,7 +992,7 @@ header > div::after {
     width: 85%;
     max-width: 450px;
   }
-  #contact .img {
+  #contact img {
     width: 85%;
   }
   #contact form {
