--- a/scss/_area4_class.scss
+++ b/scss/_area4_class.scss
@@ -28,6 +28,8 @@
 		border-radius: 10px;
 		margin: 3% 5%;
 		box-shadow: 0px 0px 10px #61616133;
+		transition: linear 0.3s;
+		
 		img {   //VBA1.jpg~VBA4.jpg
 			width: 100%;
 		}
@@ -36,6 +38,9 @@
 			text-align: left;
 			padding: 20px 10px 20px 60px;
 		}
+	}
+	.container div:hover {
+		transform: scale(1.07);
 	}
 }
 /*=====RWD==========================*/
