--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -20,7 +20,66 @@ $heights_nav: 50px;
   font-size: 18px;
 }
 
-
 @media (max-width: 920px) {	//隱藏導覽列
 			.topbar {display: none;}
+}
+
+/*-----馬上開課標誌------------------------------*/
+nav>a {
+	display: block;
+	width: 120px;
+	height: 100px;
+	border-radius: 50%;
+	background-color: #FEFF00;
+	text-decoration: none;
+	color: #000;
+	font-weight: bold;
+	font-size: 28px;
+  // letter-spacing: 0.15em;
+  text-align: center;
+	line-height: 1.3em;
+	padding-top: 20px;
+  z-index: 999;
+  opacity: 0;
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  transition: ease-out 0.3s;
+  
+
+  &::after {
+    content: url(../images/icon_pointer.svg);
+    display: block;
+    transform: rotate(-30deg);
+    position: absolute;
+    // left: 20px;
+    right: 3px;
+    bottom: 3px;
+  }
+}
+nav>a:hover {
+	-webkit-transition: all 0.6s ease;
+	transition: all 0.6s ease;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-transform: rotateY(360deg);
+	transform: rotateY(360deg);
+}
+
+
+.fixed {
+  // animation: showAni 1s;
+  opacity: 1;
+  transition: ease-out 0.5s;
+  animation: signAni 8s infinite;
+}
+// @keyframes showAni {
+//   0%{ transform: translateX(200px); }
+// }
+@keyframes signAni {
+  25% { transform: scale(1.1); }
+  40% { transform: scale(1); }
+  50% { transform: scale(1); }
+  75% { transform: scale(1.2); }
+  95% { transform: scale(1); }
 }
