--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -58,6 +58,7 @@ nav>a {
   }
 }
 nav>a:hover {
+  animation-play-state:paused;
 	-webkit-transition: all 0.6s ease;
 	transition: all 0.6s ease;
 	-webkit-transform-style: preserve-3d;
