刪除線的CSS動畫，改由jQuery做，因為ios設備的刪除線css animation不能正常work

--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -33,20 +33,16 @@ p,ul {
 	font-weight: bold;
 }
 // 畫刪除線的文字------------------------
-.del {
+.fault {
 	font-size: map-get($fontSizes, del);
 	font-weight: bold;
 	color: map-get($colors, dark);
+}
+.del {
 	text-decoration: line-through; 
 	text-decoration-color: red;
-	animation: delAnimation 2s ease 3s infinite normal;
 }
 
-@keyframes delAnimation
-{
-  from { text-decoration: line-through; text-decoration-color: transparent }
-  to { text-decoration: line-through; text-decoration-color: red }
-}
 // 前面有小方塊的標題---------------------
 .title {
     &::before {
