--- a/css/style.css
+++ b/css/style.css
@@ -38,41 +38,16 @@ p, ul {
   font-weight: bold;
 }
 
-.del {
+.fault {
   font-size: 1.5rem;
   font-weight: bold;
   color: #2a95af;
+}
+
+.del {
   text-decoration: line-through;
   -webkit-text-decoration-color: red;
           text-decoration-color: red;
-  -webkit-animation: delAnimation 2s ease 3s infinite normal;
-          animation: delAnimation 2s ease 3s infinite normal;
-}
-
-@-webkit-keyframes delAnimation {
-  from {
-    text-decoration: line-through;
-    -webkit-text-decoration-color: transparent;
-            text-decoration-color: transparent;
-  }
-  to {
-    text-decoration: line-through;
-    -webkit-text-decoration-color: red;
-            text-decoration-color: red;
-  }
-}
-
-@keyframes delAnimation {
-  from {
-    text-decoration: line-through;
-    -webkit-text-decoration-color: transparent;
-            text-decoration-color: transparent;
-  }
-  to {
-    text-decoration: line-through;
-    -webkit-text-decoration-color: red;
-            text-decoration-color: red;
-  }
 }
 
 .title {
