--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ header {
 }
 
 /*-----標題字的底色塊----------------------------*/
-header > div {
+#bannerTitle {
   max-width: 655px;
   height: 350px;
   background-color: rgba(30, 137, 144, 0.5);
@@ -307,7 +307,7 @@ header > div {
 }
 
 /*-----老師圖片，要在色塊上方、標題文字下方--------*/
-header > div::before {
+#bannerTitle::before {
   content: "";
   background-image: url(../images/banner_teacher.png);
   background-repeat: no-repeat;
@@ -320,8 +320,29 @@ header > div::before {
   z-index: -1;
 }
 
+/*-----老師名字---------------------------------*/
+.teacherName {
+  max-width: 1110px;
+  margin: 65px auto 0;
+  padding: 0 20px;
+  text-align: right;
+  position: relative;
+}
+
+.teacherName > p {
+  color: #FFF;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.15em;
+}
+
+.teacherName > p:first-of-type {
+  font-size: 20px;
+  padding-right: 52px;
+}
+
 /*-----副標題文字: 工作效率UP...-----------------*/
-header > div > p {
+#bannerTitle > p {
   color: #FFF;
   font-size: 24px;
   font-weight: bold;
@@ -329,19 +350,15 @@ header > div > p {
   max-width: 475px;
   margin: auto;
   position: relative;
-  top: 38px;
+  margin-top: 5.5%;
   border-top: 2px solid #FFF;
   border-bottom: 2px solid #FFF;
   padding: 8px 0;
 }
 
 /*-----大標題圖片: 掌握Excel...-----------------*/
-header > div > img {
-  margin-top: 36px;
-}
-
 /*-----標題的裝飾箭頭---------------------------*/
-header > div::after {
+#bannerTitle::after {
   content: "";
   padding: 0;
   background-image: url(../images/banner_arrow.png);
@@ -378,84 +395,185 @@ header > div::after {
   }
 }
 
-/*header banner 平板版型========================*/
-@media (max-width: 1024px) {
+/*header banner 平板(橫)版型--換背景圖、老師照片及名字縮小一點==========*/
+@media (max-width: 1000px) {
   header {
-    background-image: url(../source/banner_bgt_test.jpg);
+    background-image: url(../images/banner_bgt.jpg);
     background-size: 100% auto;
     height: 0;
     padding-bottom: 85%;
   }
-  header div {
+  #bannerTitle {
     margin-top: 11.5%;
-    background-clip: content-box;
-    padding: 0 10% 50%;
   }
-  header div::before {
-    top: 27.5%;
-    left: 61%;
-    width: 50%;
+  #bannerTitle::before {
+    top: 240px;
+    left: 425px;
+    width: 430px;
     background-size: contain;
+  }
+  .teacherName {
+    margin-top: 26%;
+    padding-right: 7%;
+  }
+  .teacherName > p:first-of-type {
+    font-size: 17px;
+    padding-right: 45px;
+  }
+  .teacherName > p:last-of-type {
+    font-size: 26px;
   }
 }
 
-/*header banner 手機版型======================*/
-@media (max-width: 815px) {
+/*----改變標題區塊大小----------------------*/
+@media (max-width: 890px) {
+  #bannerTitle {
+    margin-top: 8%;
+    height: 325px;
+  }
+  #bannerTitle::before {
+    width: 400px;
+    top: 220px;
+    left: 435px;
+  }
+  #bannerTitle img {
+    width: 75%;
+  }
+  #bannerTitle::after {
+    background-size: contain;
+    width: 25%;
+    left: 70%;
+    position: absolute;
+    margin-top: 42.5%;
+  }
+  .teacherName {
+    margin-top: 27%;
+    padding-right: 4%;
+  }
+}
+
+/*header banner 平板(直)版型--換背景圖、改標題區塊設定方式==========*/
+@media (max-width: 768px) {
   header {
     background-image: url(../images/banner_bgm.jpg);
-    padding-bottom: 125%;
+    padding-bottom: 116%;
   }
-  header div {
-    width: 90%;
-    background-clip: border-box;
+  #bannerTitle {
+    width: 85%;
     height: 0;
-    padding: 0 0 50%;
+    padding: 5% 0 39%;
   }
-  header div::before {
+  #bannerTitle::before {
     width: 70%;
     top: 91.8%;
     left: 48%;
   }
-  header div p {
-    font-size: 21px;
+  #bannerTitle p {
+    font-size: 22px;
     letter-spacing: 2px;
-    width: 70%;
-    margin-left: 15%;
-  }
-  header div img {
     width: 80%;
+    margin-top: 0%;
   }
-  header div::after {
-    background-size: contain;
-    width: 25%;
-    left: 70%;
-    top: -65px;
+  #bannerTitle::after {
+    width: 23%;
+    margin-top: 45%;
+    left: 72%;
+  }
+  .teacherName {
+    margin-top: 50%;
+    padding-right: 8%;
+  }
+}
+
+/*-----改箭頭位置-------------------------*/
+@media (max-width: 625px) {
+  #bannerTitle::after {
+    width: 22%;
+    margin-top: 51%;
+  }
+}
+
+/*header banner 手機版型====================*/
+@media (max-width: 550px) {
+  #bannerTitle {
+    padding: 7% 0 42%;
+  }
+  #bannerTitle::before {
+    top: 89%;
+  }
+  #bannerTitle p {
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 1.1em;
+    width: 75%;
+  }
+  #bannerTitle img {
+    width: 75%;
+  }
+  #bannerTitle::after {
+    margin-top: 55%;
+  }
+  .teacherName {
+    margin-top: 48%;
+  }
+  .teacherName > p:first-of-type {
+    font-size: 15px;
+    padding-right: 34px;
+  }
+  .teacherName > p:last-of-type {
+    font-size: 22px;
   }
 }
 
 /*header banner 小手機版型====================*/
-@media (max-width: 565px) {
-  header div {
-    padding-bottom: 55%;
+@media (max-width: 475px) {
+  #bannerTitle {
+    padding-bottom: 39%;
   }
-  header div::before {
-    top: 89%;
+  #bannerTitle p {
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: normal;
+    border-width: 1px;
   }
-  header div p {
+  #bannerTitle img {
+    width: 72%;
+  }
+  #bannerTitle::after {
+    margin-top: 57%;
+  }
+  .teacherName > p:first-of-type {
+    font-size: 13px;
+    padding-right: 24px;
+  }
+  .teacherName > p:last-of-type {
     font-size: 18px;
-    letter-spacing: 1px;
-    line-height: 1.1em;
-    width: 70%;
-    margin-left: 15%;
   }
-  header div img {
-    width: 75%;
-    margin-top: 12%;
+}
+
+/*-----富標題文字微調----------------*/
+@media (max-width: 385px) {
+  #bannerTitle p {
+    font-size: 14px;
+    width: 83%;
   }
-  header div::after {
-    width: 23%;
-    top: -55px;
-    left: 73%;
+  #bannerTitle::after {
+    margin-top: 64%;
+    width: 21%;
+  }
+}
+
+/*header banner 版型 320以下====================*/
+@media (max-width: 318px) {
+  #bannerTitle {
+    height: auto;
+    padding: 10% 0 5%;
+  }
+  #bannerTitle img {
+    width: 90%;
+  }
+  #bannerTitle::after {
+    content: none;
   }
 }
 
