--- a/scss/_area1_info.scss
+++ b/scss/_area1_info.scss
@@ -19,7 +19,7 @@
 		// 課程名稱&資訊----------------------
 		p {padding: 3px 50px;}
 		p:first-of-type {
-			font-size: 24px;
+			// font-size: 24px;
 			padding: 25px 50px;
 		}
 	}
