--- a/css/style.css
+++ b/css/style.css
@@ -954,10 +954,13 @@ header {
 }
 
 #contact h3 {
-  width: 800px;
+  width: 400px;
   margin: 0 auto 60px;
-  line-height: 2em;
+  line-height: 2.6em;
   text-align: center;
+  font-size: 26px;
+  letter-spacing: 3px;
+  color: #39616b;
   background-color: #fff45c;
   border-radius: 10px;
   -webkit-box-shadow: 0 11px #B7CFD1;
@@ -1052,8 +1055,8 @@ header {
 /*=====RWD===========================*/
 @media (max-width: 875px) {
   #contact h3 {
-    font-size: 50px;
-    width: 600px;
+    font-size: 26px;
+    width: 400px;
   }
   #contact img {
     float: none;
@@ -1081,12 +1084,12 @@ header {
 
 @media (max-width: 650px) {
   #contact h3 {
-    font-size: 32px;
+    font-size: 26px;
     width: 85%;
     max-width: 450px;
   }
   #contact img {
-    width: 85%;
+    width: 75%;
   }
   #contact form {
     width: 90%;
