--- a/css/style.css
+++ b/css/style.css
@@ -458,7 +458,7 @@ header {
   #bannerTitle::before {
     width: 70%;
     top: 91.8%;
-    left: 48%;
+    left: 31%;
   }
   #bannerTitle p {
     font-size: 22px;
@@ -473,7 +473,7 @@ header {
   }
   .teacherName {
     margin-top: 50%;
-    padding-right: 8%;
+    padding-right: 20%;
   }
 }
 
@@ -562,10 +562,20 @@ header {
     padding: 10% 0 5%;
   }
   #bannerTitle img {
-    width: 90%;
+    width: 80%;
   }
   #bannerTitle::after {
     content: none;
+  }
+  .teacherName {
+    margin-top: 35%;
+  }
+  .teacherName > p:first-of-type {
+    font-size: 13px;
+    padding-right: 9px;
+  }
+  .teacherName > p:last-of-type {
+    font-size: 15px;
   }
 }
 
