修改.student區域的文字大小

--- a/scss/_area5_students.scss
+++ b/scss/_area5_students.scss
@@ -14,7 +14,7 @@
 	}
 	h3 {
 		margin-top: 70px;
-		font-size: 2.6rem;
+		font-size: 1.725rem;
 	}
 	ul {
 		list-style: none;
@@ -64,7 +64,7 @@
 		line-height: 1.5em;
 	}
 	.students h3 {
-		font-size: 1.9rem;
+		// font-size: 1.9rem;
 		line-height: 1em;
 	}
 }
