--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -7,9 +7,8 @@ $fontSizes: (							//預設文字大小16px=1rem
 	h1: 1.875rem,						//30px,在.info
 	teacher_h3: 1.875rem,		//30px,在.teacher中的老師名字
 	classPoints_h4: 1.625rem,//26px,4個課程重點方塊的標題
-	student_li: 1.225rem,		//30px,在.student的項目標題
-	student_p: 1.125rem,				//18px,在.student的項目說明文字
-	contact_p: 1.625rem			//30px,表單區塊的免費領取Excel數位學習秘笈
+	student_li: 1.375rem,		//22px,在.student的項目標題
+	student_p: 1rem,				//16px,在.student的項目說明文字
 );
 
 p,ul {
@@ -127,13 +126,10 @@ h4 {
 		font-size:  map-get($fontSizes, classPoints_h4) - 0.2rem;
 	}
 	.students ul li {// 適合學習對象的項目標題
-		// font-size: map-get($fontSizes, student_li) - 0.375rem;
+		font-size: map-get($fontSizes, student_li) - 0.125rem;
 		margin-top: 15px;
 	}
 	.students ul li p {// 適合學習對象的項目中的說明文字
-		font-size: map-get($fontSizes, student_p) - 0.25rem;
-	}
-	#contact .img p {// 表單區塊的免費領取字樣
-		font-size:  map-get($fontSizes, contact_p) - 0.125rem;
+		font-size: map-get($fontSizes, student_p) - 0.125rem;
 	}
 }
